--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-NEW-RULES.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-NEW-RULES.html
@@ -5,6 +5,10 @@
 {% endblock %}
 
 {% block content %}
+
+    
+
+
     <div class="nhsuk-grid-row">
         <div class="nhsuk-grid-column-two-thirds">
             <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
@@ -46,7 +50,7 @@
                     <!-- CONTENT FOR PAY IN FULL -->
 
                     {% from '../MACRO-payment-block.njk' import paymentBlock %}
-                    {{ paymentBlock( data.secondPayment, 'true', 'true', 'false' ) }}
+                    {{ paymentBlock( 'full', 'false', data.secondPayment ) }}
 
                 </div>
 
