Tidying up the simplified route. Adding formTypes to the payment form Macro.

--- a/app/views/v6-pcn/partial-payment-NEW-RULES-ALREADY-PAID.html
+++ b/app/views/v6-pcn/partial-payment-NEW-RULES-ALREADY-PAID.html
@@ -42,7 +42,7 @@ Pay by card
           {{ paymentPlan( data.secondPayment ) }}
 
           <!-- PARTIAL PAYMENT FORM -->
-          {{ partialPaymentForm( 'false' ) }}
+          {{ partialPaymentForm( 'partialAlreadyPaid' ) }}
 
         {% else %}
 
