--- a/app/views/v6-pcn/partial-payment-NEW-RULES.html
+++ b/app/views/v6-pcn/partial-payment-NEW-RULES.html
@@ -39,7 +39,7 @@ Pay by card
           {{ paymentPlan( data.secondPayment ) }}
 
           <!-- PARTIAL PAYMENT FORM -->
-          {{ partialPaymentForm() }}
+          {{ partialPaymentForm( 'partial' ) }}
 
 
       <p><a href="#">Print this page</a></p>
