--- a/app/views/v6-pcn/partial-payment-SIMPLIFIED.html
+++ b/app/views/v6-pcn/partial-payment-SIMPLIFIED.html
@@ -35,7 +35,7 @@ Pay by card
           <h2 class="nhsuk-heading-m">How much are you paying today?</h2>
 
           <!-- PARTIAL PAYMENT FORM -->
-          {{ partialPaymentForm( 'false' ) }}
+          {{ partialPaymentForm( 'simplified' ) }}
 
 
       <p><a href="#">Print this page</a></p>
