--- a/app/views/v6-pcn/MACRO-partial-payment-form.njk
+++ b/app/views/v6-pcn/MACRO-partial-payment-form.njk
@@ -1,4 +1,13 @@
-{% macro partialPaymentForm( showOverpaymentNotice = 'true' ) %}
+<!-- 
+
+  FORM TYPES 
+  
+  partial
+  partialAlreadyPaid
+  simplified
+
+-->
+{% macro partialPaymentForm( formType = 'partial' ) %}
 
     {% from 'input/macro.njk' import input %}
     {% from 'checkboxes/macro.njk' import checkboxes %}
@@ -20,8 +29,10 @@
                 prefix: '£'
         }) }}
 
-        {% if showOverpaymentNotice === 'true' %}
+        {% if formType === 'partial' %}
             <p class="nhsuk-body">You can choose to overpay this month, but this amount will not count toward your next monthly payment.</p>
+        {% elseif formType === 'simplified' %}
+            <p class="nhsuk-body">Payments can be as little or as much as you like.</p>
         {% endif %}
             
         <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
