Tweaking the wording from "overpay" to pay more.

--- a/app/views/v6-pcn/MACRO-partial-payment-form.njk
+++ b/app/views/v6-pcn/MACRO-partial-payment-form.njk
@@ -30,7 +30,7 @@
         }) }}
 
         {% if formType === 'partial' %}
-            <p class="nhsuk-body">You can choose to overpay this month, but this amount will not count toward your next monthly payment.</p>
+            <p class="nhsuk-body">You can choose to pay more than £16.67 this month, but this will not count toward your next monthly payment.</p>
         {% elseif formType === 'simplified' %}
             <p class="nhsuk-body">Payments can be as little or as much as you like.</p>
         {% endif %}
