Adding the manual payment plan to the simplified route as a suggestion.

--- a/app/views/v6-pcn/MACRO-partial-payment-form.njk
+++ b/app/views/v6-pcn/MACRO-partial-payment-form.njk
@@ -32,7 +32,7 @@
         {% if formType === 'partial' %}
             <p class="nhsuk-body">You can choose to pay more than £16.67 this month, but this will not count toward your next monthly payment.</p>
         {% elseif formType === 'simplified' %}
-            <p class="nhsuk-body">Payments can be as little or as much as you like, but we recommend a payment each month of £16.67.</p>
+            <p class="nhsuk-body">Payments can be as much as you like, but we recommend a payment each month of £16.67.</p>
         {% endif %}
             
         <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
