--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED.html
@@ -56,7 +56,7 @@
                 
                     <p class="nhsuk-body">If you want spread the cost of your PCN, you can make regular manual payments using this service.</p>
                     <p class="nhsuk-body">You will need to make your first payment by {{ 12 | alterTodaysDateByNumberOfDays }} and then make further payments every month until you have paid the PCN in full.</p>
-                    <p class="nhsuk-body">Payments can be as little or as much as you like, but we recommend a payment each month of £16.67.</p>
+                    <p class="nhsuk-body">Payments can be as much as you like, but we recommend a payment each month of £16.67.</p>
 
                     <!-- WARNING OPTION -->
                     {{ warningCallout({
