Adding the suggested payment plan to the first page.

--- a/app/views/v6-pcn/MACRO-payment-plan.njk
+++ b/app/views/v6-pcn/MACRO-payment-plan.njk
@@ -14,7 +14,7 @@
         ] %}
         {% set planTitle = 'View suggested payment dates' %}
         {% set showStatuses = 'false' %}
-        {% set additionalHTML = '<p class="nhsuk-body">Making payments on these dates will allow you to pay the amount you owe over 3 months.</p>' %}
+        {% set additionalHTML = '<p class="nhsuk-body">Making the suggested payments on these dates will allow you to pay the amount you owe over 3 months.</p>' %}
 
     {% else %}
 
