--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED.html
@@ -58,6 +58,10 @@
                     <p class="nhsuk-body">You will need to make your first payment by {{ 12 | alterTodaysDateByNumberOfDays }} and then make further payments every month until you have paid the PCN in full.</p>
                     <p class="nhsuk-body">Payments can be as much as you like, but we suggest a payment each month of £16.67 to pay over 3 months.</p>
 
+                    <!-- SUGGESTED -->
+                    {% from '../MACRO-payment-plan.njk' import paymentPlan %}
+                    {{ paymentPlan( 'simplified', 'false', 'false'  ) }}
+
                     <!-- WARNING OPTION -->
                     {{ warningCallout({
                         classes: 'nhsuk-u-margin-bottom-5',
