--- a/app/views/v6-pcn/MACRO-payment-plan.njk
+++ b/app/views/v6-pcn/MACRO-payment-plan.njk
@@ -12,7 +12,7 @@
             { text: 'Suggested amount' },
             { text: 'Suggested date' }
         ] %}
-        {% set planTitle = 'View suggested payment dates' %}
+        {% set planTitle = 'View suggested payment plan' %}
         {% set showStatuses = 'false' %}
         {% set additionalHTML = '<p class="nhsuk-body">Making the suggested payments on these dates will allow you to pay the amount you owe over 3 months.</p>' %}
 
