Missed a "suggested on the column".

--- a/app/views/v6-pcn/MACRO-payment-plan.njk
+++ b/app/views/v6-pcn/MACRO-payment-plan.njk
@@ -10,7 +10,7 @@
         {% set headRow = [
             { html: '<span class="nhsuk-u-visually-hidden">Payment number</span>' },
             { text: 'Suggested amount' },
-            { text: 'Suggested date' }
+            { text: 'Date' }
         ] %}
         {% set planTitle = 'View suggested payment plan' %}
         {% set showStatuses = 'false' %}
