--- a/app/views/v6-pcn/MACRO-payment-plan.njk
+++ b/app/views/v6-pcn/MACRO-payment-plan.njk
@@ -14,7 +14,8 @@
         ] %}
         {% set planTitle = 'View suggested payment plan' %}
         {% set showStatuses = 'false' %}
-        {% set additionalHTML = '<p class="nhsuk-body">Making the suggested payments on these dates will allow you to pay the amount you owe over 3 months.</p>' %}
+        {% set additionalHTML = '
+        <p class="nhsuk-body">Making the suggested payments on these dates will allow you to pay the amount you owe over 3 months.</p><p class="nhsuk-body">The first payment amount may be different to future payments. This can be because the amount owed does not split equally over 3 months.</p>' %}
 
     {% else %}
 
